tests/parser/bad/cmodule-procedure-id-lparen-rparen-with.scilla
scilla_version 0

contract Nothing
()

procedure something ()
with
